# ImGui-SDL2-GLEW-Template

./: CMakeLists.txt  Setup-Ubuntu.sh
src/: main.cpp
src/Editor/: Editor.cpp  Editor.h  ImGuiWidgets.cpp  ImGuiWidgets.h
src/Editor/Tools/: EditorTool.h
src/Graphics/: GfxMgr.cpp  GfxMgr.h  WindowMgr.cpp  WindowMgr.h
src/Input/: InputMgr.cpp  InputMgr.h
src/Misc/: ColorConsole.cpp  ColorConsole.h  DataTypes.h  Requires.h  Singleton.h
